@@ -43,24 +43,26 @@
                         </div>
                     </li>
 
-                    <li class="preview">
-                        {% trans 'Preview' as preview_label %}
-                        {% if preview_modes|length > 1 %}
-                            <div class="dropdown dropup dropdown-button match-width">
+                    {% if preview_modes %}
+                        <li class="preview">
+                            {% trans 'Preview' as preview_label %}
+                            {% if preview_modes|length > 1 %}
+                                <div class="dropdown dropup dropdown-button match-width">
+                                    {% include "wagtailadmin/pages/_preview_button_on_edit.html" with label=preview_label icon=1 %}
+                                    <div class="dropdown-toggle icon icon-arrow-up"></div>
+                                    <ul>
+                                        {% for mode_name, mode_display_name in preview_modes %}
+                                            <li>
+                                                {% include "wagtailadmin/pages/_preview_button_on_edit.html" with mode=mode_name label=mode_display_name %}
+                                            </li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            {% else %}
                                 {% include "wagtailadmin/pages/_preview_button_on_edit.html" with label=preview_label icon=1 %}
-                                <div class="dropdown-toggle icon icon-arrow-up"></div>
-                                <ul>
-                                    {% for mode_name, mode_display_name in preview_modes %}
-                                        <li>
-                                            {% include "wagtailadmin/pages/_preview_button_on_edit.html" with mode=mode_name label=mode_display_name %}
-                                        </li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                        {% else %}
-                            {% include "wagtailadmin/pages/_preview_button_on_edit.html" with label=preview_label icon=1 %}
-                        {% endif %}
-                    </li>
+                            {% endif %}
+                        </li>
+                    {% endif %}
 
                     <li class="meta">
                         <p class="modified">
